add telas html basicas

--- a/mysite/templates/input.html
+++ b/mysite/templates/input.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<title>TDC The Dev Transformation - tela de exibicao</title>
+<title>TDC The Dev Transformation - tela de input</title>
 </head>
 <body>
 <p> -------------------------------- </p>
