implementacoes varios endpoins - basico

--- a/mysite/templates/tdc_input.html
+++ b/mysite/templates/tdc_input.html
@@ -5,9 +5,11 @@
 <title>TDC The Dev Transformation - tela de input</title>
 </head>
 <body>
-<form method="get">
+<form  method="post">
     <input type="text" name="nome" placeholder="digite seu Nome aqui">
     <input type="e-mail" name="email" placeholder="Digite seu e-mail">
-    <input type="button" name="enviar" value="Enviar">
+    <div class="button">
+        <button style="margin-top: 5px;" type="submit">Enviar</button>
+    </div>
 </form>
 </html>
