--- a/mysite/templates/tdc_radio_button.html
+++ b/mysite/templates/tdc_radio_button.html
@@ -5,11 +5,13 @@
 <title>TDC The Dev Transformation - tela com radio buttons</title>
 </head>
 <body>
-<form method="get">
+<form method="post">
     <p>Qual sua idade?</p>
     <input type="radio" name="idade" value="18_22">18 a 22 <br>
     <input type="radio" name="idade" value="23_30">23 a 30 <br>
     <input type="radio" name="idade" value="mais31">acima de 31<br>
-    <input type="button" name="enviar" value="Enviar">
+    <div class="button">
+        <button style="margin-top: 5px;" type="submit">Enviar</button>
+    </div>
 </form>
 </html>
