comentarios no codigo principl

--- a/mysite/templates/tdc_input.html
+++ b/mysite/templates/tdc_input.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8"/>
 <title>TDC The Dev Transformation - tela de input</title>
 </head>
-<body>
+<body style="background-color:powderblue;">
+<h1>TDC Transformation 2021</h1>
+<p>--- Exempplo Input</p>
 <form  method="post">
     <input type="text" name="nome" placeholder="digite seu Nome aqui">
     <input type="e-mail" name="email" placeholder="Digite seu e-mail">
