--- a/mysite/templates/tdc_radio_button.html
+++ b/mysite/templates/tdc_radio_button.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <title>TDC The Dev Transformation - tela com radio buttons</title>
 </head>
-<body>
+<body style="background-color:powderblue;">
 <form method="post">
     <p>Qual sua idade?</p>
     <input type="radio" name="idade" value="18_22">18 a 22 <br>
