comentarios no codigo principl

--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -5,8 +5,26 @@
 <title>TDC The Dev Transformation - tela de exibicao</title>
 </head>
 <body>
-<p> -------------------------------- </p>
-<p>     Pagina HTML </p>
-<p> -------------------------------- </p>
+<p>#</p>
+<p># Aplicação criada para fins de exemplo</p>
+<p># Para: TDC 2021 - Transformation</p>
+<p>#</p>
+<p># Trilha: Python</p>
+<p>#</p>
+<p># Autores:  Arnott Ramos Caiado</p>
+<p>#           Inoã de Paulo Liberato</p>
+<p>#</p>
+<p># MVP, Protótipo, rápido Deploy Web com Python: uso do PythonAnywhere</p>
+<p>#</p>
+<p>#    Às vezes é necessário ter um protótipo rodando na web em tempo record. Ou ainda,</p>
+<p>#    você está diante de um desafio onde o tempo para validar a idéia é curtíssimo:</p>
+<p>#    eis que entra o PythonAnywhere como alternativa para sua solução.</p>
+<p>#    Isto ocorreu comigo há um tempo atrás, quando tinha que resolver em equipe um problema integrando back, front e mobile com Python.</p>
+<p>#  endpoint inicial     : https://tdc2021.pythonanywhere.com/</p>
+<p>#  endpoint opções      : https://tdc2021.pythonanywhere.com/tdc</p>
+<p>#  endpoint input       : https://tdc2021.pythonanywhere.com/tdcinput</p>
+<p>#  endpoint botao radio : https://tdc2021.pythonanywhere.com/tdcradio</p>
+<p>#  endpoint api         : https://tdc2021.pythonanywhere.com/tdcapi</p>
+<p># ------------------------------------------------</p>
 </body>
 </html>
