--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+
+body {
+        		font-family: Arial, Helvetica, sans-serif;
+               background-color:  rgba(127, 127, 139, 0.986);
+
+      }
+
+h1{
+        color: white;
+        text-align: left;
+        font-size: 40px;
+       	font-family: Arial, Helvetica, sans-serif;
+        text-shadow: 5px 5px 5px rgb(0, 0, 0);
+    }
+
+
+
 * {
     margin: 0 auto;
     padding: 0;
