pequenas modificações - remoção espaços e outros

--- a/mysite/templates/tdc_input.html
+++ b/mysite/templates/tdc_input.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color:powderblue;">
 <h1>TDC Transformation 2021</h1>
-<p>--- Exempplo Input</p>
+<p>--- Exemplo Input</p>
 <form  method="post">
     <input type="text" name="nome" placeholder="digite seu Nome aqui">
     <input type="e-mail" name="email" placeholder="Digite seu e-mail">
