pequenos ajustes no menu

--- a/mysite/templates/tdc_menu.html
+++ b/mysite/templates/tdc_menu.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-      <h1> TDC The Dev Conference - Transformation - Trilha Python <br></h1>
+      <h1> TDC The Dev Conference - Transformation  2021 - Trilha Python <br></h1>
     </div>
 
     <nav id="menu-h">
