pequenas modificações em comentários do codigo

--- a/mysite/templates/tdc_menu.html
+++ b/mysite/templates/tdc_menu.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <div>
-      <h1> TDC The Dev Conference - Transformation  2021 - Trilha Python <br></h1>
+    <div id="header">
+        <img src="/static/images/tdc.jpeg" width="80px">
+        <h1> TDC The Dev Conference - Transformation  2021 - Trilha Python <br></h1>
     </div>
 
     <nav id="menu-h">
@@ -23,6 +24,7 @@
             <li><a href="https://tdc2021.pythonanywhere.com/tdcapi">API</a></li>
             <li><a href="https://i9i.solutions">Contato</a></li>
         </ul>
+
     </nav>
 
 </body>
