--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
 
 body {
         		font-family: Arial, Helvetica, sans-serif;
@@ -8,13 +6,18 @@ body {
       }
 
 h1{
-        color: white;
+        color: #141414 ;
+        margin: 0 10px 0 0;
         text-align: left;
         font-size: 40px;
        	font-family: Arial, Helvetica, sans-serif;
         text-shadow: 5px 5px 5px rgb(0, 0, 0);
     }
 
+#header{
+    background-color: white;
+    display: flex;
+}
 
 
 * {
