correção melhorias html . Remocao html nao usados

--- a/mysite/templates/tdc_input.html
+++ b/mysite/templates/tdc_input.html
@@ -6,7 +6,9 @@
 </head>
 <body style="background-color:powderblue;">
 <h1>TDC Transformation 2021</h1>
-<p>--- Exemplo Input</p>
+<p>--- Exemplo de Input ---</p>
+<p>*** fins didático apenas</p>
+<p>*** não gravamos *******</p>
 <form  method="post">
     <input type="text" name="nome" placeholder="digite seu Nome aqui">
     <input type="e-mail" name="email" placeholder="Digite seu e-mail">
