--- a/mysite/templates/tdc_radio_button.html
+++ b/mysite/templates/tdc_radio_button.html
@@ -7,6 +7,7 @@
 <body style="background-color:powderblue;">
 <form method="post">
     <p>Qual sua idade?</p>
+    <p>** dados não serão gravados **</p>
     <input type="radio" name="idade" value="18_22">18 a 22 <br>
     <input type="radio" name="idade" value="23_30">23 a 30 <br>
     <input type="radio" name="idade" value="mais31">acima de 31<br>
